SIGA-602 Add missing parameter to Ignite startup script in docker-compose