@@ -115,6 +115,7 @@ elif [ "${version}" -ge 17 ] ; then
         --add-opens=java.base/java.time=ALL-UNNAMED \
         --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
         --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED \
+        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED \
         ${JVM_OPTS}"
 fi
 
